rlBabel: bug fixes w.r.t line breaking and saves at select points. RLdev: optimised compilation of case blocks
git-svn-id: http://svn.haeleth.net/pub/rldev@70 8d5b77e3-600c-0410-b16e-99778ea16b4f

--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,11 @@
   rlBabel is now mature enough for limited use (it supports the features Kanon
   needs).
 
+RLC:
+
+  "case" statements are now compiled more efficiently in the optimal case where
+  all "of" expressions are constant and there are no gaps in coverage.
+
 
 -- 1.30 - 2006-2-1 --
 
