git-svn-id: http://svn.haeleth.net/pub/rldev@78 8d5b77e3-600c-0410-b16e-99778ea16b4f

--- a/src/docsrc/kepago.tex
+++ b/src/docsrc/kepago.tex
@@ -1004,8 +1004,8 @@ programming tasks.
     not implement the more complex line breaking logic required for Western
     languages.  In Japanese, it is acceptable to break a line anywhere,
     including in the middle of words, so this is the behaviour \reallive{}
-    adopts.  It is therefore necessary, when using English text, to implement
-    lineation specially.
+    adopts.  This makes it necessary to implement lineation specially for
+    Western text.
 
     Versions of \package\ up to 1.03 implemented static lineation.  Since this 
     is impossible to do correctly, however, this feature has been removed and 
