--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,12 @@
                                    CHANGELOG
 -------------------------------------------------------------------------------
 
+-- 1.36 - 2006-4-17 --
+
+  Fix a bug causing incorrect code generation in CLANNAD's SEEN9033.
+  
+  Support non-inline speaker names in rlBabel.
+
 -- 1.35 - 2006-4-11 --
 
   Numerous bug fixes.  The Textout library now works properly.
