--- a/src/docsrc/kepago.tex
+++ b/src/docsrc/kepago.tex
@@ -747,10 +747,10 @@ programming tasks.
     \begin{nicelist}
     \item[None]
       For Japanese or ASCII text. This is the default.
-    \item[KeyFC]
+    \item[Chinese]
       For Simplified Chinese text. The output uses a non-standard encoding of 
-      the GB2312 character set (the same encoding as the Key Fans Club's 
-      \opus{Clannad} translation).
+      the GB2312 character set (roughly the same encoding as the Key Fans Club's 
+      \opus{Clannad} translation, but with a few subtle differences).
     \item[Western]
       For Western European text. The output uses a non-standard encoding of
       the Windows CP1252 character set (ISO-8859-1 with extensions).
