RLdev: attempt to fix Vaconv bug reported by Bae Jin-uk
git-svn-id: http://svn.haeleth.net/pub/rldev@87 8d5b77e3-600c-0410-b16e-99778ea16b4f

--- a/src/docsrc/kepago.tex
+++ b/src/docsrc/kepago.tex
@@ -717,9 +717,7 @@ programming tasks.
     There are two solutions to this issue.  One is to fake the required 
     characters: some glyphs can be included as bitmaps with \ccref{em}, others 
     (such as accented letters) can be built up through overprinting by using 
-    \ccref{mv}.
-    
-    A better solution\,\textemdash\,in some cases, such as Chinese, the 
+    \ccref{mv}. A better solution\,\textemdash\,in some cases, such as Chinese, the 
     \emph{only} solution\,\textemdash\,is to use a non-JIS character set, with a 
     non-standard encoding that has the same characteristics as Shift\_JIS, and to 
     arrange for this to be decoded on the fly in an intermediate layer between 
