RLdev: fix labels at end of bytecode, implement Korean transformation
git-svn-id: http://svn.haeleth.net/pub/rldev@96 8d5b77e3-600c-0410-b16e-99778ea16b4f

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,15 @@
                                    CHANGELOG
 -------------------------------------------------------------------------------
 
+-- 1.39
+
+  Fix UTF-8 BOM handling.
+  
+  Improve handling of the case where a scenario ends with a label.
+  
+  Add support for Korean text (KS X 1001).
+
+
 -- 1.38 - 2006-4-22 --
 
   Fix some more code-generation bugs.
