RLdev: update documentation for 1.39
git-svn-id: http://svn.haeleth.net/pub/rldev@100 8d5b77e3-600c-0410-b16e-99778ea16b4f

--- a/src/docsrc/kepago.tex
+++ b/src/docsrc/kepago.tex
@@ -749,6 +749,9 @@ programming tasks.
       For Simplified Chinese text. The output uses a non-standard encoding of 
       the GB2312 character set (roughly the same encoding as the Key Fans Club's 
       \opus{Clannad} translation, but with a few subtle differences).
+    \item[Korean]
+      For Korean text. The output uses a non-standard encoding of the KS~X~1001
+      character set.
     \item[Western]
       For Western European text. The output uses a non-standard encoding of
       the Windows CP1252 character set (ISO-8859-1 with extensions).
