RLdev: whew, it finally works on Solaris...
git-svn-id: http://svn.haeleth.net/pub/rldev@111 8d5b77e3-600c-0410-b16e-99778ea16b4f

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,11 @@
                                    CHANGELOG
 -------------------------------------------------------------------------------
 
+-- 1.40 - unreleased --
+
+  Fix build system for portability (it now works in Darwin and Solaris)
+
+
 -- 1.39 - 2006-5-1 --
 
   Fix UTF-8 BOM handling.
