--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,8 @@
 
   Fix build system for portability (it now works in Darwin and Solaris)
 
+  Add support for rlBabel-encoded default names.  Fix Korean support.
+
 
 -- 1.39 - 2006-5-1 --
 
