--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,10 @@
 
   Add support for rlBabel-encoded default names.  Fix Korean support.
 
+VACONV:
+
+  Fix decoding of G00 format 1.
+
 
 -- 1.39 - 2006-5-1 --
 
