RLdev, rlBabel: fix Hangul (?)
git-svn-id: http://svn.haeleth.net/pub/rldev@114 8d5b77e3-600c-0410-b16e-99778ea16b4f

--- a/CHANGES
+++ b/CHANGES
@@ -12,7 +12,9 @@
 
   Fix build system for portability (it now works in Darwin and Solaris)
 
-  Add support for rlBabel-encoded default names.  Fix Korean support.
+  Add support for rlBabel-encoded default names.
+  
+  Modify Korean support, replacing the hanja with more hangul.
 
 VACONV:
 
