--- a/CHANGES
+++ b/CHANGES
@@ -10,23 +10,25 @@
 
 -- 1.40 - unreleased --
 
-  Fix build system for portability (it now works in Darwin and Solaris)
-
-  Add support for rlBabel-encoded default names.
-  
+  Fix build system for portability (it now works in Darwin and Solaris).
+  Add support for rlBabel-encoded default names.  
   Modify Korean support, replacing the hanja with more hangul.
 
 VACONV:
 
   Fix decoding of G00 format 1.
 
+RLC:
+
+  Fix a potential issue with compilation of unary operations in function
+ parameters.
+  Fix a bug in the parsing of #DSTRACK declarations in gameexe.ini.
+
 
 -- 1.39 - 2006-5-1 --
 
-  Fix UTF-8 BOM handling.
-  
-  Improve handling of the case where a scenario ends with a label.
-  
+  Fix UTF-8 BOM handling.  
+  Improve handling of the case where a scenario ends with a label.  
   Add support for Korean text (KS X 1001).
 
 
@@ -40,57 +42,50 @@ VACONV:
 VACONV:
 
   Implement origin specifications in G00 format 2 regions; these are used by
-  some dialog graphics in Clannad.
-  
+ some dialog graphics in Clannad.  
   Fix fatal errors caused by failure to range-check region bounds.
   
 
 -- 1.36 - 2006-4-17 --
 
-  Fix a bug causing incorrect code generation in CLANNAD's SEEN9033.
-  
+  Fix a bug causing incorrect code generation in CLANNAD's SEEN9033.  
   Support non-inline speaker names in rlBabel.
 
 
 -- 1.35 - 2006-4-11 --
 
-  Numerous bug fixes.  The Textout library now works properly.
-
+  Numerous bug fixes.
+  The Textout library now works properly.
   rlBabel's proportional text output is now mature enough for limited use (it 
-  supports the features Kanon needs).
+ supports the features Kanon needs).
 
 RLC:
 
   "case" statements are now compiled more efficiently in the optimal case where
-  all "of" expressions are constant and there are no gaps in coverage.
+ all "of" expressions are constant and there are no gaps in coverage.
 
 
 -- 1.30 - 2006-2-1 --
 
   Support for non-Japanese character sets.  Games can now use ISO-8859-1 or 
-  GB2132, in addition to JIS.  (This requires interpreter support.  A generic 
-  noninvasive patch is supplied which works with RealLive 1.2 and up.)
-
+ GB2132, in addition to JIS.  (This requires interpreter support.  A generic 
+ noninvasive patch is supplied which works with RealLive 1.2 and up.)
   Support per-file input encoding specification.
-  
   Fixed a number of bugs in all utilities related to relative pathnames.
-
   Fixed handling of effects in select() calls, removing the Princess Bride
-  special-casing and replacing it with what should be the correct general
-  implementation.  The syntax accepted for effect clauses has been expanded
-  accordingly.
+ special-casing and replacing it with what should be the correct general
+ implementation.  The syntax accepted for effect clauses has been expanded
+ accordingly.
 
   Disabled Camomile support, as it was unmaintained and largely unused.
   
 RLC:
   
   Fixed a bug that sometimes caused calls to certain functions from conditional 
-  expressions to be compiled twice.
-  
+ expressions to be compiled twice.
   Generate correct code for == and != on string operands.
-  
   New alternative dynamic formatting library 'rlBabel': this supports 
-  proportional text, but only works in RealLive 1.2 and up.  Work in progress.
+ proportional text, but only works in RealLive 1.2 and up.  Work in progress.
 
 KPRL:
 
@@ -99,10 +94,10 @@ KPRL:
 API:
 
   Modified a number of function names, definitions, and documentation in the 
-  light of new information.  This has resulted in some non-backwards-compatible 
-  API changes, though the old functions have been deprecated rather than removed 
-  for now.  Note in particular that the streq() function no longer exists: it 
-  was a victim of mistaken identity.
+ light of new information.  This has resulted in some non-backwards-compatible 
+ API changes, though the old functions have been deprecated rather than removed 
+ for now.  Note in particular that the streq() function no longer exists: it 
+ was a victim of mistaken identity.
 
 
 -- 1.25 - 2005-12-16 --
@@ -110,7 +105,7 @@ API:
 RLC:
 
   Fixed a bug introduced in the previous release that was causing optimisation
-  of conditional jumps to emit invalid bytecode.
+ of conditional jumps to emit invalid bytecode.
 
 
 -- 1.24 - 2005-12-10 --
@@ -118,14 +113,14 @@ RLC:
 RLC:
 
   Fixed faulty 1.3 support by implementing the other call variables (strK)
-  and fixing the related jump functions.  Internally, reduced the number of
-  hardwired special cases.
+ and fixing the related jump functions.  Internally, reduced the number of
+ hardwired special cases.
   
 
 -- 1.23 - 2005-9-26 --
 
   Improved support for RealLive 1.3 by implementing call variables (intL) and
-  adding the ability to parse some related jump functions.
+ adding the ability to parse some related jump functions.
   
 API:
 
@@ -137,9 +132,9 @@ API:
 API:
 
   Fixed __empty_string?() implementation.
-  
+ 
   Textout: implemented breaking after non-escaped hyphens; added `\k-' and `\k ' 
-  for explicit non-breaking hyphen and space.
+ for explicit non-breaking hyphen and space.
 
 RLC:
   
@@ -148,7 +143,7 @@ RLC:
 VACONV:
 
   Rearchitected in a more extensible way; added basic output support for Majiro
-  formats (.rc8, .rct).
+ formats (.rc8, .rct).
 
 
 -- 1.21 - 2005-6-22 --
@@ -156,31 +151,27 @@ VACONV:
 API:
 
   Renamed Date(), Time(), and DateTime() to GetDate(), GetTime(), and
-  GetDateTime() respectively, to resolve a naming conflict.  Renamed objHide()
-  and objBgHide() to objClear() and objBgClear(), which more accurately
-  reflect the functions' purpose.
-
+ GetDateTime() respectively, to resolve a naming conflict.  Renamed objHide()
+ and objBgHide() to objClear() and objBgClear(), which more accurately
+ reflect the functions' purpose.
   Textout: fixed inaccurate lineation in the presence of \e{} and \em{}.
 
 RLC:
 
   Fixed bug where using empty string parameters could generate malformed code.
-
   Fixed bug preventing use of certain non-ASCII characters in identifiers.
-
   Implemented resource-file-based code rewriting with the \f{} control code.
-  (As yet undocumented.)
+ (As yet undocumented.)
 
 VACONV:
 
   Fixed generation of regions in G00 format 2 bitmaps.
-
   Fixed bug causing black and white masks to be lost in some circumstances.
 
 RLXML:
 
   First release: auxiliary data conversion tool.  Currently supports conversion
-  of GAN files to and from XML.
+ of GAN files to and from XML.
 
 
 -- 1.20 - 2005-6-7 --
@@ -188,10 +179,8 @@ RLXML:
 API:
 
   Fine-grained API versioning; among other things, this means that pre-1.1
-  versions of RealLive are now supported properly.
-
+ versions of RealLive are now supported properly.
   More new control codes (\mv{}, \pos{}, etc.)
-
   Introduced Textout, a new dynamic lineation library.
 
 RLC:
@@ -202,15 +191,14 @@ RLC:
 -- 1.11 - 2005-4-19 --
 
   Major compatibility breaches.  Altered syntax of several features; removed
-  static lineation and glosses altogether, pending improved reimplementation.
+ static lineation and glosses altogether, pending improved reimplementation.
 
 API:
 
   Support for emitting codes \e{}, \em{}.
-
   Generalised handling of grpMulti etc; other functions of this sort (e.g.
-  the index_series() function introduced in later 1.2.6 builds) can now just be
-  added straight to reallive.kfn.
+ the index_series() function introduced in later 1.2.6 builds) can now just be
+ added straight to reallive.kfn.
 
 RLC:
 
@@ -223,7 +211,7 @@ KPRL:
 VACONV:
 
   First release: graphic conversion tool.  Currently supports conversions
-  between G00, PDT, and PNG.
+ between G00, PDT, and PNG.
 
 
 -- 1.03 - 2004-12-16 --
@@ -231,29 +219,26 @@ VACONV:
 KPRL:
 
   Fixed unhandled exception resulting from failure to auto-detect `kinetic'
-  target.
+ target.
 
 RLAS:
 
   Compilation to `kinetic' target now works.
-
   New control code \assume{} provides a workaround for various situations that
-  the automatic lineation routine cannot handle correctly.  [Removed in 1.11]
-
+ the automatic lineation routine cannot handle correctly.  [Removed in 1.11]
   New variable GLOSS_SEP_WINDOW provides a method to display hypertext glosses
-  in novel-type games using R_COMMAND_MOD to display long pages.  [Removed in 1.11]
+ in novel-type games using R_COMMAND_MOD to display long pages.  [Removed in 1.11]
 
 
 -- 1.02 - 2004-12-12 --
 
   Limited support for a new target `kinetic', which handles the bytecode changes
-  in the kinetic.exe interpreter.
+ in the kinetic.exe interpreter.
 
 RLAS:
 
   Lineation now reads settings from the INI file as documented and applies the
-  correct spacing to hankaku characters.
-
+ correct spacing to hankaku characters.
   Fixed AVG2000 support.
 
 
@@ -265,14 +250,11 @@ RLAS:
 -- 1.00 - 2004-11-25 --
 
   Manual written.
-
   Support for encodings other than CP932.
-
   Camomile is now optional.
-
   Package renamed; the default search path now looks for an rldev directory
-  rather than a kprl directory, and the KPRL environment variable has been
-  renamed RLDEV.
+ rather than a kprl directory, and the KPRL environment variable has been
+ renamed RLDEV.
 
 KPRL:
 
@@ -281,11 +263,8 @@ KPRL:
 RLAS:
 
   AVG2000 support.
-
   New codes: glosses [removed in 1.11], resource string management.
-
   More convenient format for names with \{}, \m{A-ZZ}, and \l{A-ZZ}.
-
   Recognise conditional options and inline variables in the select() family.
 
 
