rldev: Remove inaccurate claims re KeyFC
git-svn-id: http://svn.haeleth.net/pub/rldev@167 8d5b77e3-600c-0410-b16e-99778ea16b4f

--- a/src/docsrc/kepago.tex
+++ b/src/docsrc/kepago.tex
@@ -747,8 +747,7 @@ programming tasks.
       For Japanese or ASCII text. This is the default.
     \item[Chinese]
       For Simplified Chinese text. The output uses a non-standard encoding of 
-      the GB2312 character set (roughly the same encoding as the Key Fans Club's 
-      \opus{Clannad} translation, but with a few subtle differences).
+      the GB2312 character set (based on a system formerly used by the Key Fans Club).
     \item[Korean]
       For Korean text. The output uses a non-standard encoding and character set.
       The characters encoded comprise the non-hanja parts of KS~X~1001, plus the
