Basic fixes to work with Little Busters! (extraction only)
git-svn-id: http://svn.haeleth.net/pub/rldev@175 8d5b77e3-600c-0410-b16e-99778ea16b4f

--- a/CHANGES
+++ b/CHANGES
@@ -8,9 +8,15 @@
                                    CHANGELOG
 -------------------------------------------------------------------------------
 
--- [next release] --
+-- [subversion] --
 
   Add support for Traditional Chinese (CP950).
+
+KPRL:
+
+  Add support for reading the additional encryption layer used in
+  Little Busters!.  Note that rlc CANNOT currently recompile files in
+  this format - only extraction is supported.
 
 RLC:
 
